--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,8 +17,6 @@ h4,
 h5,
 h6,
 p,
-ul.reset,
-ol.reset,
 li,
 figure,
 figcaption,
@@ -30,8 +28,10 @@ dd {
 
 /*--- List ---*/
 
-ul.reset {
+.list-reset {
 	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 /*--- Images, Video ---*/
 img,
