--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -134,6 +134,7 @@
 		background: $white-color;
 		width: 100%;
 		height: 3px;
+		transition: all 0.3s;
 	}
 	span::before,
 	span::after {
@@ -148,5 +149,20 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
+	}
+	&.active {
+		span {
+			background-color: transparent;
+			&::before {
+				transform: rotate(45deg);
+				top: 50%;
+				transition: all 0.3s;
+			}
+			&::after {
+				transform: rotate(-45deg);
+				top: 50%;
+				transition: all 0.3s;
+			}
+		}
 	}
 }
