added quote sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,4 @@
 @import "./sections/_services.scss";
 @import "./sections/_info.scss";
 @import "./sections/_gallery.scss";
+@import "./sections/_quote.scss";
