added sections video

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,4 @@
 @import "./sections/_info.scss";
 @import "./sections/_gallery.scss";
 @import "./sections/_quote.scss";
+@import "./sections/_video.scss";
