added blog section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,3 +11,4 @@
 @import "./sections/_gallery.scss";
 @import "./sections/_quote.scss";
 @import "./sections/_video.scss";
+@import "./sections/_blog.scss";
