added team section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,3 +12,4 @@
 @import "./sections/_quote.scss";
 @import "./sections/_video.scss";
 @import "./sections/_blog.scss";
+@import "./sections/_team.scss";
