added price section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,4 @@
 @import "./sections/_video.scss";
 @import "./sections/_blog.scss";
 @import "./sections/_team.scss";
+@import "./sections/_price.scss";
