--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,7 @@
 @import "./sections/_blog.scss";
 @import "./sections/_team.scss";
 @import "./sections/_price.scss";
+@import "./sections/_map.scss";
+@import "./sections/_contacts.scss";
+@import "./sections/_social.scss";
+@import "./sections/_footer.scss";
