--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -91,3 +91,26 @@ body {
 		}
 	}
 }
+
+.btn {
+	cursor: pointer;
+	display: block;
+	border: 1px solid #c4c4c4;
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 75%;
+	text-transform: uppercase;
+	color: $main-color;
+	padding: 23px;
+	min-width: 350px;
+	text-align: center;
+	transition: all 0.3s;
+	@include max480px {
+		min-width: 100%;
+	}
+
+	&:hover {
+		background: $hover-color;
+		color: $white-color;
+	}
+}
